# QCOM

./: .gitignore  .gitignore.txt  1_billion_3.0_4_rungs.txt  CONTRIBUTING.md  Processor.py  QCOM.py  README.md  ROADMAP.md  getting_1_billion_shots_files.ipynb  hamiltonian_solver.py  information_measure_quantum.py  information_measures_classical.py  noxfile.py  progress_manager.py  pyproject.toml  pytest.ini  repo-landscape.md  tutorial_hamiltonians.ipynb
.github/: CODEOWNERS
.github/workflows/: docs.yml  python-publish.yml  quality.yml  test.yml
QCOM.egg-info/: PKG-INFO
example_data/: 16_atom_aquila.json
examples/: data_normalization_sampling_example.py  dynamic_evolve_state_example.py  ising_hamiltonian_example.py  lattice_register_example.py  rydberg_hamiltonian_example.py  static_ground_state_example.py
qcom/: __init__.py  atoms.py  classical_info.py  data.py  hamiltonians.py  io.py  lattice_register.py
qcom/controls/: __init__.py  time_series.py
qcom/data/: noise.py  sampling.py
qcom/hamiltonians/: __init__.py  base.py  ising.py  rydberg.py
qcom/io/: parquet.py
qcom/metrics/: bitstrings.py  classical.py  entanglement.py  probabilities.py
qcom/solvers/: __init__.py  dynamic.py  static.py
scripts/: validate_tutorials.py
src/qcom/: __init__.py  lattice_register.py
tests/: test_atoms.py  test_classical_info.py  test_compatibility_aliases.py  test_data.py  test_io.py  test_lattice_register.py  test_public_facade.py  test_time_series.py
tests/controls/: test_time_series.py
tests/core/: test_results.py
tests/data/: test_noise.py  test_ops.py  test_sampling.py
tests/hamiltonians/: test_ising.py  test_rydberg.py
tests/io/: test_aquila.py  test_parquet.py  test_text.py
tests/metrics/: test_bitstrings.py  test_classical.py  test_entanglement.py  (+2 more)
tutorials/: tutorial_1_io.ipynb  tutorial_1_processing_data.ipynb  tutorial_2_hamiltonians.ipynb  tutorial_2_lattice_register.ipynb  tutorial_3_rydberg.ipynb  tutorial_4_static_solver.ipynb  tutorial_4static_solver.ipynb  tutorial_5_time_series.ipynb  tutorial_6_dynamic_solver.ipynb  tutorial_7_data.ipynb  tutorial_8_metrics.ipynb  tutorial_99_live_demo.ipynb  tutorial_atoms.ipynb  tutorial_lattice_register.ipynb  tutorial_rydberg.ipynb  tutorial_time_series.ipynb
(+39 files in other folders)
