[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QCOM"
version = "0.2.2"
description = "Quantum Computation Library"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.txt"]

authors = [
  { name = "Avi Kaufman", email = "avigkaufman@gmail.com" }
]

# Core runtime deps (keep lightweight)
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "pandas>=1.5"
]

# Nice metadata for PyPI
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/AviKaufman/QCOM"
Source = "https://github.com/AviKaufman/QCOM"
Issues = "https://github.com/AviKaufman/QCOM/issues"

[project.optional-dependencies]
# Optional I/O support for Parquet
parquet = ["pyarrow>=10"]
# Optional readout-mitigation helper used in qcom.data.noise
mitigation = ["mthree>=2.0"]
# Plotting / tutorials niceties (optional)
viz = ["matplotlib>=3.6"]
# Dev conveniences
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.4",
  "mypy>=1.0",
  "nox>=2024.4.15",
  "build>=1.2",
]
# Aggregate “all” extra
all = [
  "QCOM[parquet,mitigation,viz]"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["qcom", "qcom.*"]
exclude = ["tests", "tests.*", "example_data", "images"]

[tool.setuptools]
include-package-data = true

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E402", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
files = ["src/qcom"]
ignore_missing_imports = true
warn_unused_ignores = true
show_error_codes = true
